a few more changed related to supporting the plain text editor.

--- a/Toolbar/Demo/Demo.html
+++ b/Toolbar/Demo/Demo.html
@@ -183,6 +183,9 @@
             $.Arte.configuration.commandAttrType = "tagName";
             $.extend(true, $.Arte.Toolbar.configuration, {
                 classes: {
+                    "button": {
+                        "selected": "btn-success"
+                    },
                     "dialog":
                     {
                         "insertLink": {
