Documentation update with feature demonstrator demo

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ $(".editor").fontSize(10); // Change fontsize of the selected text to 10px
     </pre>
             <h1>Examples</h1>
 
-            <h2>Reference toolbar implementation</h2>
-            <iframe class="editor-demo" src="Demo/CompleteToolbar/Toolbar.html"></iframe>
+            <h2>Feature demonstrator</h2>
+            <iframe class="editor-demo" src="Demo/FeatureDemonstrator/Demo.html"></iframe>
 
             <h2>Simple Toolbar Examples</h2>
             <a href="Demo/SimpleToolbar/Toolbar.html">Simple toolbar</a><br />
