Making the dialog more skinnable

--- a/Demo/Demo.html
+++ b/Demo/Demo.html
@@ -78,15 +78,15 @@
     <!-- Aggregated Files -->
     <script type="text/javascript" src="../Release/V0.1/Rangy.debug.js"></script>
     <script type="text/javascript" src="../Release/V0.1/Arte.debug.js"></script>
-    <script type="text/javascript" src="../Release/V0.1/Toolbar.debug.js"></script>
+  <!--  <script type="text/javascript" src="../Release/V0.1/Toolbar.debug.js"></script>-->
     
     <!--Non Aggregated Files-->
-<!--    <script type="text/javascript" src="../Toolbar/toolbar.js"></script>
+    <script type="text/javascript" src="../Toolbar/toolbar.js"></script>
     <script type="text/javascript" src="../Toolbar/Buttons/Button.js"></script>
     <script type="text/javascript" src="../Toolbar/Buttons/ButtonWithDropDown.js"></script>
     <script type="text/javascript" src="../Toolbar/Buttons/ButtonWithDialog.js"></script>
     <script type="text/javascript" src="../Toolbar/Configuration.js"></script>
-    <script type="text/javascript" src="../Toolbar/SelectionManager.js"></script>-->
+    <script type="text/javascript" src="../Toolbar/SelectionManager.js"></script>
 
 </body>
 </html>
