updating the url of the demos

--- a/Demos/UnobtrusiveToolbar/Demo.html
+++ b/Demos/UnobtrusiveToolbar/Demo.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="overview">
-        This page includes an example of very simple toolbar. Example code is located <a href="https://github.com/vistaprint/ArteJS/blob/gh-pages/Demo/UnobtrusiveToolbar/Toolbar.html">here</a>
+        This page includes an example of very unobtrusive javascript toolbar. Example code is located <a href="https://github.com/vistaprint/ArteJS/blob/gh-pages/Demos/UnobtrusiveToolbar/Demo.html">here</a>
     </div>
 
     <div id="demo">
