--- a/Demo/Demo.html
+++ b/Demo/Demo.html
@@ -76,17 +76,17 @@
     <script type="text/javascript" src="demo.js"></script>
 
     <!-- Aggregated Files -->
-    <script type="text/javascript" src="../Release/V0.1/Rangy.debug.js"></script>
-    <script type="text/javascript" src="../Release/V0.1/Arte.debug.js"></script>
-  <!--  <script type="text/javascript" src="../Release/V0.1/Toolbar.debug.js"></script>-->
+    <script type="text/javascript" src="../Release/Rangy.v1.2.3.debug.js"></script>
+    <script type="text/javascript" src="../Release/Arte.v0.2.debug.js"></script>
+    <script type="text/javascript" src="../Release/Toolbar.v0.2.debug.js"></script>
     
     <!--Non Aggregated Files-->
-    <script type="text/javascript" src="../Toolbar/toolbar.js"></script>
+<!--    <script type="text/javascript" src="../Toolbar/toolbar.js"></script>
     <script type="text/javascript" src="../Toolbar/Buttons/Button.js"></script>
     <script type="text/javascript" src="../Toolbar/Buttons/ButtonWithDropDown.js"></script>
     <script type="text/javascript" src="../Toolbar/Buttons/ButtonWithDialog.js"></script>
     <script type="text/javascript" src="../Toolbar/Configuration.js"></script>
-    <script type="text/javascript" src="../Toolbar/SelectionManager.js"></script>
+    <script type="text/javascript" src="../Toolbar/SelectionManager.js"></script>-->
 
 </body>
 </html>
