--- a/Demo/Demo.html
+++ b/Demo/Demo.html
@@ -72,6 +72,7 @@
     </div>
     
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="scripts/json2.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="demo.js"></script>
 
