Check for changes when applying value or outerValue
Fix for Issue #13: Setting value and outerValue method should check if
the value has changed

--- a/Demo/Demo.html
+++ b/Demo/Demo.html
@@ -77,17 +77,43 @@
     <script type="text/javascript" src="demo.js"></script>
 
     <!-- Aggregated Files -->
-    <script type="text/javascript" src="../Release/Rangy.v1.2.3.debug.js"></script>
+    <!--<script type="text/javascript" src="../Release/Rangy.v1.2.3.debug.js"></script>
     <script type="text/javascript" src="../Release/Arte.v0.2.debug.js"></script>
-    <script type="text/javascript" src="../Release/Toolbar.v0.2.debug.js"></script>
+    <script type="text/javascript" src="../Release/Toolbar.v0.2.debug.js"></script>-->
     
     <!--Non Aggregated Files-->
-<!--    <script type="text/javascript" src="../Toolbar/toolbar.js"></script>
+    <script type="text/javascript" src="../Editor/core/Arte.js"></script>
+    <script type="text/javascript" src="../Editor/core/TextArea.js"></script>
+    <script type="text/javascript" src="../Editor/core/Configuration.js"></script>    
+    <script type="text/javascript" src="../Editor/core/PluginManager.js"></script>
+    <script type="text/javascript" src="../Editor/core/Commands.js"></script>
+    <script type="text/javascript" src="../Editor/core/Util.js"></script>
+
+    <script type="text/javascript" src="../Editor/lib/jquery-extensions/jquery-dom-cleanup.js"></script>
+    <script type="text/javascript" src="../Editor/lib/jquery-extensions/jquery-dom-manipulation.js"></script>
+    <script type="text/javascript" src="../Editor/lib/jquery-extensions/jquery-dom-traversal.js"></script>
+
+    <script type="text/javascript" src="../Editor/lib/rangy-1.2.3/rangy-core.js"></script>
+    <script type="text/javascript" src="../Editor/lib/rangy-1.2.3/rangy-selectionsaverestore.js"></script>
+    <script type="text/javascript" src="../Editor/lib/rangy-extensions/rangy-blockElementApplier.js"></script>    
+    <script type="text/javascript" src="../Editor/lib/rangy-extensions/rangy-inlineElementApplier.js"></script>    
+    <script type="text/javascript" src="../Editor/lib/rangy-extensions/rangy-elementApplierOptions.js"></script>    
+    <script type="text/javascript" src="../Editor/lib/rangy-extensions/rangy-extensions.js"></script>    
+    <script type="text/javascript" src="../Editor/lib/rangy-extensions/richtextCommandApplier.js"></script>  
+      
+    <script type="text/javascript" src="../Editor/plugins/InsertCommand.js"></script>
+    <script type="text/javascript" src="../Editor/plugins/keyboardEventHandler.js"></script>
+    <script type="text/javascript" src="../Editor/plugins/pasteHandler.js"></script>
+    <script type="text/javascript" src="../Editor/plugins/StateDetector.js"></script>
+    <script type="text/javascript" src="../Editor/plugins/UndoManager.js"></script>
+
+    <!-- Toolbar -->
+    <script type="text/javascript" src="../Toolbar/toolbar.js"></script>
     <script type="text/javascript" src="../Toolbar/Buttons/Button.js"></script>
     <script type="text/javascript" src="../Toolbar/Buttons/ButtonWithDropDown.js"></script>
     <script type="text/javascript" src="../Toolbar/Buttons/ButtonWithDialog.js"></script>
     <script type="text/javascript" src="../Toolbar/Configuration.js"></script>
-    <script type="text/javascript" src="../Toolbar/SelectionManager.js"></script>-->
+    <script type="text/javascript" src="../Toolbar/SelectionManager.js"></script>
 
 </body>
 </html>
