--- a/Demo/Demo.html
+++ b/Demo/Demo.html
@@ -71,15 +71,15 @@
         <div class="console" style="max-height: 200px; overflow: auto;"></div>
     </div>
     
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/json2.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="demo.js"></script>
 
     <!-- Aggregated Files -->
-    <!--<script type="text/javascript" src="../Release/Rangy.v1.2.3.debug.js"></script>
-    <script type="text/javascript" src="../Release/Arte.v0.2.debug.js"></script>
-    <script type="text/javascript" src="../Release/Toolbar.v0.2.debug.js"></script>-->
+    <!--<script type="text/javascript" src="../Release/rangy.1.3alpha.804.debug.js"></script>
+    <script type="text/javascript" src="../Release/arte.0.2.debug.js"></script>
+    <script type="text/javascript" src="../Release/toolbar.0.2.debug.js"></script>-->
     
     <!--Non Aggregated Files-->
     <script type="text/javascript" src="../Editor/core/Arte.js"></script>
@@ -93,8 +93,8 @@
     <script type="text/javascript" src="../Editor/lib/jquery-extensions/jquery-dom-manipulation.js"></script>
     <script type="text/javascript" src="../Editor/lib/jquery-extensions/jquery-dom-traversal.js"></script>
 
-    <script type="text/javascript" src="../Editor/lib/rangy-1.2.3/rangy-core.js"></script>
-    <script type="text/javascript" src="../Editor/lib/rangy-1.2.3/rangy-selectionsaverestore.js"></script>
+    <script type="text/javascript" src="../Editor/lib/rangy-1.3alpha.804/rangy-core.js"></script>
+    <script type="text/javascript" src="../Editor/lib/rangy-1.3alpha.804/rangy-selectionsaverestore.js"></script>
     <script type="text/javascript" src="../Editor/lib/rangy-extensions/rangy-blockElementApplier.js"></script>    
     <script type="text/javascript" src="../Editor/lib/rangy-extensions/rangy-inlineElementApplier.js"></script>    
     <script type="text/javascript" src="../Editor/lib/rangy-extensions/rangy-elementApplierOptions.js"></script>    
