--- a/Demo/Toolbar.html
+++ b/Demo/Toolbar.html
@@ -4,22 +4,54 @@
     <title>Rich text editor</title>
     <link rel="stylesheet" href="demo.css" />
     <link rel="stylesheet" href="toolbar.css" />
-    <link rel="stylesheet" href="../../CSS/stylesheet.css"/>
-    <link rel="stylesheet" href="../../CSS/page.css" />
+    <link rel="stylesheet" href="arte.css" />
 </head>
 <body>
     <div id="demo">
         <!-- Markup to host the toolbar and the editor-->
         <div class="toolbar"></div>
         <div class="editor"></div>
-        <!--Included the Rich text files-->
         <!--Dependencies-->
-        <script src="../../Scripts/3rdParty/JQuery/jquery-1.9.1.js"></script>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
-        <!-- Include the Arte scripts-->
-        <script src="../../Scripts/ArteJS/rangy.debug.js"></script>
-        <script src="../../Scripts/ArteJS/arte.debug.js"></script>
-        <script src="../../Scripts/ArteJS/toolbar.debug.js"></script>
+        <!-- Aggregated Files -->
+        <!--<script type="text/javascript" src="../Release/rangy.1.3alpha.804.debug.js"></script>
+        <script type="text/javascript" src="../Release/arte.0.2.debug.js"></script>
+        <script type="text/javascript" src="../Release/toolbar.0.2.debug.js"></script>-->
+    
+        <!--Non Aggregated Files-->
+        <script type="text/javascript" src="../Editor/core/Arte.js"></script>
+        <script type="text/javascript" src="../Editor/core/TextArea.js"></script>
+        <script type="text/javascript" src="../Editor/core/Configuration.js"></script>    
+        <script type="text/javascript" src="../Editor/core/PluginManager.js"></script>
+        <script type="text/javascript" src="../Editor/core/Commands.js"></script>
+        <script type="text/javascript" src="../Editor/core/Util.js"></script>
+
+        <script type="text/javascript" src="../Editor/lib/jquery-extensions/jquery-dom-cleanup.js"></script>
+        <script type="text/javascript" src="../Editor/lib/jquery-extensions/jquery-dom-manipulation.js"></script>
+        <script type="text/javascript" src="../Editor/lib/jquery-extensions/jquery-dom-traversal.js"></script>
+
+        <script type="text/javascript" src="../Editor/lib/rangy-1.3alpha.804/rangy-core.js"></script>
+        <script type="text/javascript" src="../Editor/lib/rangy-1.3alpha.804/rangy-selectionsaverestore.js"></script>
+        <script type="text/javascript" src="../Editor/lib/rangy-extensions/rangy-blockElementApplier.js"></script>    
+        <script type="text/javascript" src="../Editor/lib/rangy-extensions/rangy-inlineElementApplier.js"></script>    
+        <script type="text/javascript" src="../Editor/lib/rangy-extensions/rangy-elementApplierOptions.js"></script>    
+        <script type="text/javascript" src="../Editor/lib/rangy-extensions/rangy-extensions.js"></script>    
+        <script type="text/javascript" src="../Editor/lib/rangy-extensions/richtextCommandApplier.js"></script>  
+      
+        <script type="text/javascript" src="../Editor/plugins/InsertCommand.js"></script>
+        <script type="text/javascript" src="../Editor/plugins/keyboardEventHandler.js"></script>
+        <script type="text/javascript" src="../Editor/plugins/pasteHandler.js"></script>
+        <script type="text/javascript" src="../Editor/plugins/StateDetector.js"></script>
+        <script type="text/javascript" src="../Editor/plugins/UndoManager.js"></script>
+
+        <!-- Toolbar -->
+        <script type="text/javascript" src="../Toolbar/toolbar.js"></script>
+        <script type="text/javascript" src="../Toolbar/Buttons/Button.js"></script>
+        <script type="text/javascript" src="../Toolbar/Buttons/ButtonWithDropDown.js"></script>
+        <script type="text/javascript" src="../Toolbar/Buttons/ButtonWithDialog.js"></script>
+        <script type="text/javascript" src="../Toolbar/Configuration.js"></script>
+        <script type="text/javascript" src="../Toolbar/SelectionManager.js"></script>
 
         <script type="text/javascript">
             $(function () {
