--- a/Editor/unittests/all.html
+++ b/Editor/unittests/all.html
@@ -11,8 +11,8 @@
     <script type="text/javascript" src="unitTestsHelper.js"></script>
 
     <!--Files To Test-->
-    <script type="text/javascript" src="../../Release/rangy.v1.2.3.debug.js"></script>
-    <script type="text/javascript" src="../../Release/arte.v0.2.debug.js"></script>
+    <script type="text/javascript" src="../../Release/rangy.1.3alpha.804.debug.js"></script>
+    <script type="text/javascript" src="../../Release/arte.0.2.debug.js"></script>
 
 
     <!-- Add the test element id and selector-->
